tests/baselines/reference/superCallFromFunction1.errors.txt
superCallFromFunction1.ts(2,5): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== superCallFromFunction1.ts (1 errors) ====
    function foo() {
        super(value => String(value));
        ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
    }